Updated about section

--- a/index.html
+++ b/index.html
@@ -93,17 +93,27 @@
 
 <!-- About Image Container -->
 <div class="about-img">
-  <img src="assests/priyanka.png" alt="About Me Image" />
+  <img src="assests/priyanka-kanaki.png" alt="About Me Image" />
 </div>
 
                 <div class="about-text animate delay-2">
                     <h3>Software Engineering Student & Web Developer</h3>
-                    <p>I'm a dedicated software engineering student with a passion for creating elegant, efficient, and user-friendly applications. With a strong foundation in computer science principles and hands-on experience in various technologies, I'm constantly seeking new challenges to expand my skills and knowledge.</p>
+                    <!-- <p>I'm a dedicated software engineering student with a passion for creating elegant, efficient, and user-friendly applications. With a strong foundation in computer science principles and hands-on experience in various technologies, I'm constantly seeking new challenges to expand my skills and knowledge.</p>
                     <p>My journey in software development began during my college years, and I've been hooked ever since. I enjoy working on projects that not only showcase my technical abilities but also make a meaningful impact.</p>
-                    <div class="skills">
+                     -->
+                     <p>
+        I'm <strong>Priyanka Kanaki</strong>, a B.Tech Computer Science student passionate about building meaningful tech solutions. I love combining logic and creativity to build web and mobile applications that make a real-world impact.
+      </p>
+      <p>
+        I specialize in <strong>Java</strong>, <strong>Python</strong>, and <strong>Frontend Development</strong>, with hands-on experience using <strong>Firebase</strong>, <strong>Flask</strong>, and <strong>Android Studio</strong>. I enjoy working on projects that blend AI, UI/UX, and software engineering.
+      </p>
+      <p>
+        Whether it's creating wellness apps, academic tools, or real-time systems, I aim to write clean code and deliver user-centric experiences.
+      </p>
+      <div class="skills">
                         <span class="skill">JavaScript</span>
-                        <span class="skill">React</span>
-                        <!-- <span class="skill">Node.js</span> -->
+                        <!-- <span class="skill">React</span>
+                        <span class="skill">Node.js</span> -->
                         <span class="skill">Python</span>
                         <span class="skill">HTML5</span>
                         <span class="skill">CSS3</span>
@@ -114,6 +124,7 @@
                         <span class="skill">AWS</span> -->
                         <span class="skill">UI/UX Design</span>
                     </div>
+      <a href="assests/Priyanka-Kanaki-resume.pdf" class=" btn">Resume</a>
                 </div>
             </div>
         </div>
