--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <span class="project-tag">JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="assests/20250608_201256.jpg" class="project-link">Live Demo</a>
+                            <a href="https://priyanka-kanaki.github.io/alumni-management-portal/ResponsiveLayout.html" class="project-link">Live Demo</a>
                             <a href="https://github.com/priyanka-kanaki/alumni-management-portal" class="project-link github">GitHub</a>
                         </div>
                     </div>
