--- a/thankyou.html
+++ b/thankyou.html
@@ -9,6 +9,9 @@
 
 </head>
 <body>
-    
+    <h1>Thank You!</h1>
+<p>Your message has been sent successfully.</p>
+<a href="index.html">Go Back Home</a>
+
 </body>
 </html>
